--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-  <div>
     <div class="logo">
-      <marquee scrollamount="8"> <img src="MSW-8.png" alt=""> </marquee>
+    <img src="MSwhite-8.png" alt="">
     </div>
 
     <div class="text">
@@ -33,7 +32,6 @@
 
 
     <main class="container">
-
       <section class="card">
         <img src="DR. JOSE L. GOMEZ.jpg" alt="" />
         <div>
@@ -169,10 +167,11 @@
 
     </section>
 
-  </div>
+    <section class="card">
+      <div> 
 
-
-
+      </div>
+    </section>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
